@@ -1,3 +1,9 @@
+2018-10-17  Stuart Caie <kyzer@cabextract.org.uk>
+  
+        * chmd_read_headers(): again reject files with blank filenames, this
+        time because their 1st or 2nd byte is null, not because their length
+        is zero.  Thanks again to Hanno Böck for finding the issue.
+
 2018-10-16  Stuart Caie <kyzer@cabextract.org.uk>
 
 	* Makefile.am: using automake _DEPENDENCIES for chmd_test appears to
